--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -129,7 +129,7 @@
             button.disabled = true;
             button.textContent = '전송 중...';
             $.ajax({
-                url: "/auth/email/send",
+                url: "/api/email/send",
                 type: "post",
                 contentType: "application/json",
                 dataType: "json",
@@ -147,37 +147,37 @@
                 }
             });
         }
-
-
-        function confirmNumber() {
-            const email = document.getElementById('email').value;
-            const emailCode = document.getElementById('emailCode').value;
-
-            if (emailCode.trim() === "") {
-                alert('인증 번호를 입력해주세요.');
-                return;
-            }
-            $.ajax({
-                url: "/auth/email/verify",
-                type: "post",
-                contentType: "application/json",
-                dataType: "json",
-                data: JSON.stringify({email: email, code: emailCode}),
-                success: function (data) {
-                    if (data.data === "True") {
-                        alert('정상적으로 처리되었습니다.');
-                        $("#Confirm").val("true");
-                    } else {
-                        alert('인증번호가 일치하지 않습니다.');
-                        $("#Confirm").val("false");
-                    }
-                },
-                error: function (xhr, status, error) {
-                    alert('인증번호 확인에 실패했습니다. 다시 시도해주세요.');
-                }
-            })
-        }
     }
+
+    function confirmNumber() {
+        const email = document.getElementById('email').value;
+        const emailCode = document.getElementById('emailCode').value;
+
+        if (emailCode.trim() === "") {
+            alert('인증 번호를 입력해주세요.');
+            return;
+        }
+        $.ajax({
+            url: "/api/email/verify",
+            type: "post",
+            contentType: "application/json",
+            dataType: "json",
+            data: JSON.stringify({email: email, code: emailCode}),
+            success: function (data) {
+                if (data.data === "True") {
+                    alert('정상적으로 처리되었습니다.');
+                    $("#Confirm").val("true");
+                } else {
+                    alert('인증번호가 일치하지 않습니다.');
+                    $("#Confirm").val("false");
+                }
+            },
+            error: function (xhr, status, error) {
+                alert('인증번호 확인에 실패했습니다. 다시 시도해주세요.');
+            }
+        })
+    }
+
 </script>
 <script type="module">
     const urlParams = new URLSearchParams(window.location.search);
